# libMighty

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: msvc_support.cmake
include/: AbstractPlayer.h  AbstractRole.h  Card.h  CardRank.h  CardType.h  CardUtilFunc.h  EnumEnumerator.h  Game.h  HumanPlayer.h  JokerCallRole.h  JokerRole.h  LibMighty.h  MightyRole.h  NormalRole.h  Round.h  Rule.h  enum_class_CardRole.h  enum_class_CardSuit.h  enum_class_CardType.h  libMighty.h  libMighty_AbstractPlayer.h  libMighty_AbstractRole.h  libMighty_BuildMacro.h  libMighty_CardRole.h  libMighty_CardSuit.h  libMighty_CardType.h  libMighty_CardUtilFunc.h  libMighty_HumanPlayer.h  libMighty_JokerCallRole.h  libMighty_JokerRole.h  libMighty_MightyRole.h  libMighty_NormalRole.h  libMighty_Round.h  stdafx.h
src/: AbstractPlayer.cpp  AbstractRole.cpp  Card.cpp  CardRank.cpp  CardRole.cpp  CardUtilFunc.cpp  Game.cpp  HumanPlayer.cpp  JokerCallRole.cpp  JokerRole.cpp  MightyRole.cpp  NormalRole.cpp  Round.cpp  Rule.cpp
