CMAKE_MINIMUM_REQUIRED (VERSION 3.4)
LIST( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" )
INCLUDE( msvc_support )

## Exe setting
RUNTIME_LIBRARY_OPTION(Release /MT)
RUNTIME_LIBRARY_OPTION(Debug /MTd)

SET(PROJECT_NAME "libMighty")
SET(SOURCE_DIR "src")
SET(HEADER_DIR "include")
SET(PCH_HEADER "stdafx.h")
SET(PCH_CPP "stdafx.cpp")

PROJECT (${PROJECT_NAME})

IF(${CMAKE_EXE_LINKER_FLAGS} MATCHES "/machine:x64")
	SET (ARCH "64")
ELSE()
	SET (ARCH "86")
ENDIF()

SET(SOURCE_FILES "")
FILE(GLOB TEMP ${SOURCE_DIR}/*.cpp ${HEADER_DIR}/*.h)
SET(SOURCE_FILES ${SOURCE_FILES} ${TEMP})

ADD_LIBRARY(${PROJECT_NAME} ${SOURCE_FILES})

SET_PROPERTY(TARGET ${PROJECT_NAME} APPEND PROPERTY LINK_FLAGS "/SUBSYSTEM:WINDOWS")

# Unicode
ADD_DEFINITIONS(-DUNICODE)
ADD_DEFINITIONS(-D_UNICODE)

# Set include directories
INCLUDE_DIRECTORIES(${HEADER_DIR})

# Precompiled header
MSVC_SET_PCH(${PROJECT_NAME}
	${HEADER_DIR}/${PCH_HEADER}
	${SOURCE_DIR}/${PCH_CPP}
)